--- a/Shared/Footer.razor
+++ b/Shared/Footer.razor
@@ -1,8 +1,8 @@
 <div class="footer-wrapper">
     <div>© @DateTime.Now.Year Venkata Satya Sai Rohit Kuppili</div>
     <div class="footer-links">
-        <a href="mailto:youremail@example.com">Email</a>
-        <a href="https://www.linkedin.com/in/your-link" target="_blank">LinkedIn</a>
-        <a href="https://github.com/your-github" target="_blank">GitHub</a>
+        <a href="mailto:rohitsatya23@gmail.com">Email</a>
+        <a href="https://www.linkedin.com/in/venkata-satya-sai-rohit-kuppili-834434244/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/kvssrohit" target="_blank">GitHub</a>
     </div>
 </div>
